src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> SIGMA
Rule 1     SIGMA -> doctype ARTICLE
Rule 2     ARTICLE -> article INFO TITLEH1 CONT_A_S cierreArticle
Rule 3     ARTICLE -> article INFO TITLEH1 CONT_A_S SECTIONS cierreArticle
Rule 4     ARTICLE -> article TITLEH1 CONT_A_S cierreArticle
Rule 5     ARTICLE -> article TITLEH1 CONT_A_S SECTIONS cierreArticle
Rule 6     ARTICLE -> article INFO CONT_A_S cierreArticle
Rule 7     ARTICLE -> article INFO CONT_A_S SECTIONS cierreArticle
Rule 8     ARTICLE -> article CONT_A_S cierreArticle
Rule 9     INFO -> info CONT_INFO cierreInfo
Rule 10    CONT_INFO -> ELEM_INFO CONT_INFO
Rule 11    CONT_INFO -> ELEM_INFO
Rule 12    ELEM_INFO -> MEDIA_OBJECT
Rule 13    ELEM_INFO -> ABSTRACT
Rule 14    ELEM_INFO -> ADDRESS
Rule 15    ELEM_INFO -> AUTHOR
Rule 16    ELEM_INFO -> DATE
Rule 17    ELEM_INFO -> COPYRIGHT
Rule 18    ELEM_INFO -> TITLEH1
Rule 19    SECTION -> section CONT_A_S cierreSection
Rule 20    SECTION -> section CONT_A_S SECTIONS cierreSection
Rule 21    SECTION -> section INFO CONT_A_S cierreSection
Rule 22    SECTION -> section INFO CONT_A_S SECTIONS cierreSection
Rule 23    SECTION -> section TITLEH2 CONT_A_S cierreSection
Rule 24    SECTION -> section TITLEH2 CONT_A_S SECTIONS cierreSection
Rule 25    SECTION -> section INFO TITLEH2 CONT_A_S cierreSection
Rule 26    SECTION -> section INFO TITLEH2 CONT_A_S SECTIONS cierreSection
Rule 27    SECTION -> section TITLEH2 cierreSection
Rule 28    SECTIONS -> SECTION
Rule 29    SECTIONS -> SECTION SECTIONS
Rule 30    SECTIONS -> SIMPLE_SEC
Rule 31    SECTIONS -> SIMPLE_SEC SECTIONS
Rule 32    CONT_A_S -> CONT_1
Rule 33    CONT_A_S -> CONT_1 CONT_A_S
Rule 34    CONT_A_S -> SECTION
Rule 35    CONT_1 -> ITEMIZED_LIST
Rule 36    CONT_1 -> IMPORTANT
Rule 37    CONT_1 -> PARA
Rule 38    CONT_1 -> SIMPARA
Rule 39    CONT_1 -> ADDRESS
Rule 40    CONT_1 -> MEDIA_OBJECT
Rule 41    CONT_1 -> INFORMAL_TABLE
Rule 42    CONT_1 -> COMMENT
Rule 43    CONT_1 -> ABSTRACT
Rule 44    SIMPLE_SEC -> simpleSection CONT_SS cierreSimpleSection
Rule 45    SIMPLE_SEC -> simpleSection INFO CONT_SS cierreSimpleSection
Rule 46    SIMPLE_SEC -> simpleSection TITLE CONT_SS cierreSimpleSection
Rule 47    SIMPLE_SEC -> simpleSection INFO TITLE CONT_SS cierreSimpleSection
Rule 48    CONT_SS -> CONT_1
Rule 49    CONT_SS -> CONT_1 CONT_SS
Rule 50    ABSTRACT -> abstract TITLE cierreAbstract
Rule 51    ABSTRACT -> abstract TITLE PARAS cierreAbstract
Rule 52    TITLE -> title CONT_TITLE cierreTitle
Rule 53    TITLEH1 -> title CONT_TITLE cierreTitle
Rule 54    TITLEH2 -> title CONT_TITLE cierreTitle
Rule 55    CONT_TITLE -> ELEM_TITLE
Rule 56    CONT_TITLE -> ELEM_TITLE CONT_TITLE
Rule 57    ELEM_TITLE -> contenido_texto
Rule 58    ELEM_TITLE -> EMPHASIS
Rule 59    ELEM_TITLE -> LINK
Rule 60    ELEM_TITLE -> EMAIL
Rule 61    PARAS -> PARA
Rule 62    PARAS -> SIMPARA
Rule 63    PARAS -> PARA PARAS
Rule 64    PARAS -> SIMPARA PARAS
Rule 65    PARA -> para CONT_PARA cierrePara
Rule 66    CONT_PARA -> ELEM_PARA
Rule 67    CONT_PARA -> ELEM_PARA CONT_PARA
Rule 68    ELEM_PARA -> contenido_texto
Rule 69    ELEM_PARA -> EMPHASIS
Rule 70    ELEM_PARA -> LINK
Rule 71    ELEM_PARA -> EMAIL
Rule 72    ELEM_PARA -> AUTHOR
Rule 73    ELEM_PARA -> COMMENT
Rule 74    ELEM_PARA -> ITEMIZED_LIST
Rule 75    ELEM_PARA -> IMPORTANT
Rule 76    ELEM_PARA -> ADDRESS
Rule 77    ELEM_PARA -> MEDIA_OBJECT
Rule 78    ELEM_PARA -> INFORMAL_TABLE
Rule 79    ITEMIZED_LIST -> itemizedlist LIST_ITEM cierreItemizedlist
Rule 80    MEDIA_OBJECT -> mediaObject INFO CONT_MEDIA_OBJECT cierreMediaObject
Rule 81    MEDIA_OBJECT -> mediaObject CONT_MEDIA_OBJECT cierreMediaObject
Rule 82    CONT_MEDIA_OBJECT -> IMAGE_OBJECT
Rule 83    CONT_MEDIA_OBJECT -> VIDEO_OBJECT
Rule 84    CONT_MEDIA_OBJECT -> IMAGE_OBJECT MEDIA_OBJECT
Rule 85    CONT_MEDIA_OBJECT -> VIDEO_OBJECT MEDIA_OBJECT
Rule 86    IMAGE_OBJECT -> imageObject INFO imageData cierreImageObject
Rule 87    IMAGE_OBJECT -> imageObject imageData cierreImageObject
Rule 88    VIDEO_OBJECT -> videoObject INFO imageData cierreVideoObject
Rule 89    VIDEO_OBJECT -> videoObject videoData cierreVideoObject
Rule 90    LIST_ITEM -> listItem CONT_ITEM cierreListItem
Rule 91    LIST_ITEM -> LIST_ITEM listItem CONT_ITEM cierreListItem
Rule 92    CONT_ITEM -> CONT_1
Rule 93    CONT_ITEM -> CONT_1 CONT_ITEM
Rule 94    AUTHOR -> author CONT_AUTHOR cierreAuthor
Rule 95    CONT_AUTHOR -> FIRSTNAME
Rule 96    CONT_AUTHOR -> SURNAME
Rule 97    CONT_AUTHOR -> EMAIL
Rule 98    CONT_AUTHOR -> FIRSTNAME SURNAME
Rule 99    CONT_AUTHOR -> FIRSTNAME EMAIL
Rule 100   CONT_AUTHOR -> SURNAME EMAIL
Rule 101   CONT_AUTHOR -> FIRSTNAME SURNAME EMAIL
Rule 102   ADDRESS -> address cierreAddress
Rule 103   ADDRESS -> address CONT_ADDRESS cierreAddress
Rule 104   CONT_ADDRESS -> ELEM_ADDRESS
Rule 105   CONT_ADDRESS -> ELEM_ADDRESS CONT_ADDRESS
Rule 106   ELEM_ADDRESS -> STREET
Rule 107   ELEM_ADDRESS -> CITY
Rule 108   ELEM_ADDRESS -> STATE
Rule 109   ELEM_ADDRESS -> PHONE
Rule 110   ELEM_ADDRESS -> EMAIL
Rule 111   ELEM_ADDRESS -> contenido_texto
Rule 112   COPYRIGHT -> copyright YEAR cierreCopyright
Rule 113   COPYRIGHT -> copyright YEAR HOLDER cierreCopyright
Rule 114   SIMPARA -> simpara CONT_SECL cierreSimpara
Rule 115   EMPHASIS -> emphasis CONT_SECL cierreEmphasis
Rule 116   COMMENT -> comment CONT_SECL cierreComment
Rule 117   LINK -> link CONT_SECL cierreLink
Rule 118   CONT_SECL -> CONT_2
Rule 119   CONT_SECL -> CONT_2 CONT_SECL
Rule 120   CONT_2 -> contenido_texto
Rule 121   CONT_2 -> EMPHASIS
Rule 122   CONT_2 -> LINK
Rule 123   CONT_2 -> EMAIL
Rule 124   CONT_2 -> AUTHOR
Rule 125   CONT_2 -> COMMENT
Rule 126   IMPORTANT -> important TITLE CONT_IMPORTANT cierreImportant
Rule 127   IMPORTANT -> important CONT_IMPORTANT cierreImportant
Rule 128   CONT_IMPORTANT -> CONT_1
Rule 129   CONT_IMPORTANT -> CONT_1 CONT_IMPORTANT
Rule 130   CONT_VAR -> CONT_3
Rule 131   CONT_VAR -> CONT_3 CONT_VAR
Rule 132   CONT_3 -> contenido_texto
Rule 133   CONT_3 -> LINK
Rule 134   CONT_3 -> EMPHASIS
Rule 135   CONT_3 -> COMMENT
Rule 136   FIRSTNAME -> firstname CONT_VAR cierreFirstname
Rule 137   SURNAME -> surname CONT_VAR cierreSurname
Rule 138   STREET -> street CONT_VAR cierreStreet
Rule 139   CITY -> city CONT_VAR cierreCity
Rule 140   STATE -> state CONT_VAR cierreState
Rule 141   PHONE -> phone CONT_VAR cierrePhone
Rule 142   EMAIL -> email CONT_VAR cierreEmail
Rule 143   DATE -> date CONT_VAR cierreDate
Rule 144   YEAR -> year CONT_VAR cierreYear
Rule 145   HOLDER -> holder CONT_VAR cierreHolder
Rule 146   INFORMAL_TABLE -> informalTable TABLE_MEDIA cierreInformalTable
Rule 147   INFORMAL_TABLE -> informalTable TABLE_GROUP cierreInformalTable
Rule 148   TABLE_MEDIA -> MEDIA_OBJECT
Rule 149   TABLE_MEDIA -> MEDIA_OBJECT TABLE_MEDIA
Rule 150   TABLE_GROUP -> TGROUP
Rule 151   TABLE_GROUP -> TGROUP TABLE_GROUP
Rule 152   TGROUP -> tgroup THEAD TFOOT TBODY cierreTgroup
Rule 153   TGROUP -> tgroup THEAD TBODY cierreTgroup
Rule 154   TGROUP -> tgroup TFOOT TBODY cierreTgroup
Rule 155   TGROUP -> tgroup TBODY cierreTgroup
Rule 156   CONT_T -> ROW
Rule 157   CONT_T -> ROW CONT_T
Rule 158   THEAD -> thead CONT_T cierreThead
Rule 159   TFOOT -> tfoot CONT_T cierreTfoot
Rule 160   TBODY -> tbody CONT_T cierreTbody
Rule 161   ROW -> row CONT_ROW cierreRow
Rule 162   CONT_ROW -> ENTRY
Rule 163   CONT_ROW -> ENTRY CONT_ROW
Rule 164   CONT_ROW -> ENTRYTBL
Rule 165   CONT_ROW -> ENTRYTBL CONT_ROW
Rule 166   ENTRY -> entry CONT_ENTRY cierreEntry
Rule 167   ENTRYTBL -> entrytbl THEAD TBODY cierreEntrytbl
Rule 168   ENTRYTBL -> entrytbl TBODY cierreEntrytbl
Rule 169   CONT_ENTRY -> contenido_texto
Rule 170   CONT_ENTRY -> contenido_texto CONT_ENTRY
Rule 171   CONT_ENTRY -> ITEMIZED_LIST
Rule 172   CONT_ENTRY -> ITEMIZED_LIST CONT_ENTRY
Rule 173   CONT_ENTRY -> IMPORTANT
Rule 174   CONT_ENTRY -> IMPORTANT CONT_ENTRY
Rule 175   CONT_ENTRY -> PARA
Rule 176   CONT_ENTRY -> PARA CONT_ENTRY
Rule 177   CONT_ENTRY -> SIMPARA
Rule 178   CONT_ENTRY -> SIMPARA CONT_ENTRY
Rule 179   CONT_ENTRY -> COMMENT
Rule 180   CONT_ENTRY -> COMMENT CONT_ENTRY
Rule 181   CONT_ENTRY -> ABSTRACT
Rule 182   CONT_ENTRY -> ABSTRACT CONT_ENTRY
Rule 183   CONT_ENTRY -> MEDIA_OBJECT
Rule 184   CONT_ENTRY -> MEDIA_OBJECT CONT_ENTRY

Terminals, with rules where they appear

abstract             : 50 51
address              : 102 103
article              : 2 3 4 5 6 7 8
author               : 94
cierreAbstract       : 50 51
cierreAddress        : 102 103
cierreArticle        : 2 3 4 5 6 7 8
cierreAuthor         : 94
cierreCity           : 139
cierreComment        : 116
cierreCopyright      : 112 113
cierreDate           : 143
cierreEmail          : 142
cierreEmphasis       : 115
cierreEntry          : 166
cierreEntrytbl       : 167 168
cierreFirstname      : 136
cierreHolder         : 145
cierreImageObject    : 86 87
cierreImportant      : 126 127
cierreInfo           : 9
cierreInformalTable  : 146 147
cierreItemizedlist   : 79
cierreLink           : 117
cierreListItem       : 90 91
cierreMediaObject    : 80 81
cierrePara           : 65
cierrePhone          : 141
cierreRow            : 161
cierreSection        : 19 20 21 22 23 24 25 26 27
cierreSimpara        : 114
cierreSimpleSection  : 44 45 46 47
cierreState          : 140
cierreStreet         : 138
cierreSurname        : 137
cierreTbody          : 160
cierreTfoot          : 159
cierreTgroup         : 152 153 154 155
cierreThead          : 158
cierreTitle          : 52 53 54
cierreVideoObject    : 88 89
cierreYear           : 144
city                 : 139
comment              : 116
contenido_texto      : 57 68 111 120 132 169 170
copyright            : 112 113
date                 : 143
doctype              : 1
email                : 142
emphasis             : 115
entry                : 166
entrytbl             : 167 168
error                : 
firstname            : 136
holder               : 145
imageData            : 86 87 88
imageObject          : 86 87
important            : 126 127
info                 : 9
informalTable        : 146 147
itemizedlist         : 79
link                 : 117
listItem             : 90 91
mediaObject          : 80 81
para                 : 65
phone                : 141
row                  : 161
section              : 19 20 21 22 23 24 25 26 27
simpara              : 114
simpleSection        : 44 45 46 47
state                : 140
street               : 138
surname              : 137
tbody                : 160
tfoot                : 159
tgroup               : 152 153 154 155
thead                : 158
title                : 52 53 54
videoData            : 89
videoObject          : 88 89
year                 : 144

Nonterminals, with rules where they appear

ABSTRACT             : 13 43 181 182
ADDRESS              : 14 39 76
ARTICLE              : 1
AUTHOR               : 15 72 124
CITY                 : 107
COMMENT              : 42 73 125 135 179 180
CONT_1               : 32 33 48 49 92 93 128 129
CONT_2               : 118 119
CONT_3               : 130 131
CONT_ADDRESS         : 103 105
CONT_AUTHOR          : 94
CONT_A_S             : 2 3 4 5 6 7 8 19 20 21 22 23 24 25 26 33
CONT_ENTRY           : 166 170 172 174 176 178 180 182 184
CONT_IMPORTANT       : 126 127 129
CONT_INFO            : 9 10
CONT_ITEM            : 90 91 93
CONT_MEDIA_OBJECT    : 80 81
CONT_PARA            : 65 67
CONT_ROW             : 161 163 165
CONT_SECL            : 114 115 116 117 119
CONT_SS              : 44 45 46 47 49
CONT_T               : 157 158 159 160
CONT_TITLE           : 52 53 54 56
CONT_VAR             : 131 136 137 138 139 140 141 142 143 144 145
COPYRIGHT            : 17
DATE                 : 16
ELEM_ADDRESS         : 104 105
ELEM_INFO            : 10 11
ELEM_PARA            : 66 67
ELEM_TITLE           : 55 56
EMAIL                : 60 71 97 99 100 101 110 123
EMPHASIS             : 58 69 121 134
ENTRY                : 162 163
ENTRYTBL             : 164 165
FIRSTNAME            : 95 98 99 101
HOLDER               : 113
IMAGE_OBJECT         : 82 84
IMPORTANT            : 36 75 173 174
INFO                 : 2 3 6 7 21 22 25 26 45 47 80 86 88
INFORMAL_TABLE       : 41 78
ITEMIZED_LIST        : 35 74 171 172
LINK                 : 59 70 122 133
LIST_ITEM            : 79 91
MEDIA_OBJECT         : 12 40 77 84 85 148 149 183 184
PARA                 : 37 61 63 175 176
PARAS                : 51 63 64
PHONE                : 109
ROW                  : 156 157
SECTION              : 28 29 34
SECTIONS             : 3 5 7 20 22 24 26 29 31
SIGMA                : 0
SIMPARA              : 38 62 64 177 178
SIMPLE_SEC           : 30 31
STATE                : 108
STREET               : 106
SURNAME              : 96 98 100 101
TABLE_GROUP          : 147 151
TABLE_MEDIA          : 146 149
TBODY                : 152 153 154 155 167 168
TFOOT                : 152 154
TGROUP               : 150 151
THEAD                : 152 153 167
TITLE                : 46 47 50 51 126
TITLEH1              : 2 3 4 5 18
TITLEH2              : 23 24 25 26 27
VIDEO_OBJECT         : 83 85
YEAR                 : 112 113

Parsing method: LALR

state 0

    (0) S' -> . SIGMA
    (1) SIGMA -> . doctype ARTICLE

    doctype         shift and go to state 2

    SIGMA                          shift and go to state 1

state 1

    (0) S' -> SIGMA .



state 2

    (1) SIGMA -> doctype . ARTICLE
    (2) ARTICLE -> . article INFO TITLEH1 CONT_A_S cierreArticle
    (3) ARTICLE -> . article INFO TITLEH1 CONT_A_S SECTIONS cierreArticle
    (4) ARTICLE -> . article TITLEH1 CONT_A_S cierreArticle
    (5) ARTICLE -> . article TITLEH1 CONT_A_S SECTIONS cierreArticle
    (6) ARTICLE -> . article INFO CONT_A_S cierreArticle
    (7) ARTICLE -> . article INFO CONT_A_S SECTIONS cierreArticle
    (8) ARTICLE -> . article CONT_A_S cierreArticle

    article         shift and go to state 4

    ARTICLE                        shift and go to state 3

state 3

    (1) SIGMA -> doctype ARTICLE .

    $end            reduce using rule 1 (SIGMA -> doctype ARTICLE .)


state 4

    (2) ARTICLE -> article . INFO TITLEH1 CONT_A_S cierreArticle
    (3) ARTICLE -> article . INFO TITLEH1 CONT_A_S SECTIONS cierreArticle
    (4) ARTICLE -> article . TITLEH1 CONT_A_S cierreArticle
    (5) ARTICLE -> article . TITLEH1 CONT_A_S SECTIONS cierreArticle
    (6) ARTICLE -> article . INFO CONT_A_S cierreArticle
    (7) ARTICLE -> article . INFO CONT_A_S SECTIONS cierreArticle
    (8) ARTICLE -> article . CONT_A_S cierreArticle
    (9) INFO -> . info CONT_INFO cierreInfo
    (53) TITLEH1 -> . title CONT_TITLE cierreTitle
    (32) CONT_A_S -> . CONT_1
    (33) CONT_A_S -> . CONT_1 CONT_A_S
    (34) CONT_A_S -> . SECTION
    (35) CONT_1 -> . ITEMIZED_LIST
    (36) CONT_1 -> . IMPORTANT
    (37) CONT_1 -> . PARA
    (38) CONT_1 -> . SIMPARA
    (39) CONT_1 -> . ADDRESS
    (40) CONT_1 -> . MEDIA_OBJECT
    (41) CONT_1 -> . INFORMAL_TABLE
    (42) CONT_1 -> . COMMENT
    (43) CONT_1 -> . ABSTRACT
    (19) SECTION -> . section CONT_A_S cierreSection
    (20) SECTION -> . section CONT_A_S SECTIONS cierreSection
    (21) SECTION -> . section INFO CONT_A_S cierreSection
    (22) SECTION -> . section INFO CONT_A_S SECTIONS cierreSection
    (23) SECTION -> . section TITLEH2 CONT_A_S cierreSection
    (24) SECTION -> . section TITLEH2 CONT_A_S SECTIONS cierreSection
    (25) SECTION -> . section INFO TITLEH2 CONT_A_S cierreSection
    (26) SECTION -> . section INFO TITLEH2 CONT_A_S SECTIONS cierreSection
    (27) SECTION -> . section TITLEH2 cierreSection
    (79) ITEMIZED_LIST -> . itemizedlist LIST_ITEM cierreItemizedlist
    (126) IMPORTANT -> . important TITLE CONT_IMPORTANT cierreImportant
    (127) IMPORTANT -> . important CONT_IMPORTANT cierreImportant
    (65) PARA -> . para CONT_PARA cierrePara
    (114) SIMPARA -> . simpara CONT_SECL cierreSimpara
    (102) ADDRESS -> . address cierreAddress
    (103) ADDRESS -> . address CONT_ADDRESS cierreAddress
    (80) MEDIA_OBJECT -> . mediaObject INFO CONT_MEDIA_OBJECT cierreMediaObject
    (81) MEDIA_OBJECT -> . mediaObject CONT_MEDIA_OBJECT cierreMediaObject
    (146) INFORMAL_TABLE -> . informalTable TABLE_MEDIA cierreInformalTable
    (147) INFORMAL_TABLE -> . informalTable TABLE_GROUP cierreInformalTable
    (116) COMMENT -> . comment CONT_SECL cierreComment
    (50) ABSTRACT -> . abstract TITLE cierreAbstract
    (51) ABSTRACT -> . abstract TITLE PARAS cierreAbstract

    info            shift and go to state 8
    title           shift and go to state 9
    section         shift and go to state 21
    itemizedlist    shift and go to state 22
    important       shift and go to state 23
    para            shift and go to state 24
    simpara         shift and go to state 25
    address         shift and go to state 26
    mediaObject     shift and go to state 27
    informalTable   shift and go to state 28
    comment         shift and go to state 29
    abstract        shift and go to state 30

    INFO                           shift and go to state 5
    TITLEH1                        shift and go to state 6
    CONT_A_S                       shift and go to state 7
    CONT_1                         shift and go to state 10
    SECTION                        shift and go to state 11
    ITEMIZED_LIST                  shift and go to state 12
    IMPORTANT                      shift and go to state 13
    PARA                           shift and go to state 14
    SIMPARA                        shift and go to state 15
    ADDRESS                        shift and go to state 16
    MEDIA_OBJECT                   shift and go to state 17
    INFORMAL_TABLE                 shift and go to state 18
    COMMENT                        shift and go to state 19
    ABSTRACT                       shift and go to state 20

state 5

    (2) ARTICLE -> article INFO . TITLEH1 CONT_A_S cierreArticle
    (3) ARTICLE -> article INFO . TITLEH1 CONT_A_S SECTIONS cierreArticle
    (6) ARTICLE -> article INFO . CONT_A_S cierreArticle
    (7) ARTICLE -> article INFO . CONT_A_S SECTIONS cierreArticle
    (53) TITLEH1 -> . title CONT_TITLE cierreTitle
    (32) CONT_A_S -> . CONT_1
    (33) CONT_A_S -> . CONT_1 CONT_A_S
    (34) CONT_A_S -> . SECTION
    (35) CONT_1 -> . ITEMIZED_LIST
    (36) CONT_1 -> . IMPORTANT
    (37) CONT_1 -> . PARA
    (38) CONT_1 -> . SIMPARA
    (39) CONT_1 -> . ADDRESS
    (40) CONT_1 -> . MEDIA_OBJECT
    (41) CONT_1 -> . INFORMAL_TABLE
    (42) CONT_1 -> . COMMENT
    (43) CONT_1 -> . ABSTRACT
    (19) SECTION -> . section CONT_A_S cierreSection
    (20) SECTION -> . section CONT_A_S SECTIONS cierreSection
    (21) SECTION -> . section INFO CONT_A_S cierreSection
    (22) SECTION -> . section INFO CONT_A_S SECTIONS cierreSection
    (23) SECTION -> . section TITLEH2 CONT_A_S cierreSection
    (24) SECTION -> . section TITLEH2 CONT_A_S SECTIONS cierreSection
    (25) SECTION -> . section INFO TITLEH2 CONT_A_S cierreSection
    (26) SECTION -> . section INFO TITLEH2 CONT_A_S SECTIONS cierreSection
    (27) SECTION -> . section TITLEH2 cierreSection
    (79) ITEMIZED_LIST -> . itemizedlist LIST_ITEM cierreItemizedlist
    (126) IMPORTANT -> . important TITLE CONT_IMPORTANT cierreImportant
    (127) IMPORTANT -> . important CONT_IMPORTANT cierreImportant
    (65) PARA -> . para CONT_PARA cierrePara
    (114) SIMPARA -> . simpara CONT_SECL cierreSimpara
    (102) ADDRESS -> . address cierreAddress
    (103) ADDRESS -> . address CONT_ADDRESS cierreAddress
    (80) MEDIA_OBJECT -> . mediaObject INFO CONT_MEDIA_OBJECT cierreMediaObject
    (81) MEDIA_OBJECT -> . mediaObject CONT_MEDIA_OBJECT cierreMediaObject
    (146) INFORMAL_TABLE -> . informalTable TABLE_MEDIA cierreInformalTable
    (147) INFORMAL_TABLE -> . informalTable TABLE_GROUP cierreInformalTable
    (116) COMMENT -> . comment CONT_SECL cierreComment
    (50) ABSTRACT -> . abstract TITLE cierreAbstract
    (51) ABSTRACT -> . abstract TITLE PARAS cierreAbstract

    title           shift and go to state 9
    section         shift and go to state 21
    itemizedlist    shift and go to state 22
    important       shift and go to state 23
    para            shift and go to state 24
    simpara         shift and go to state 25
    address         shift and go to state 26
    mediaObject     shift and go to state 27
    informalTable   shift and go to state 28
    comment         shift and go to state 29
    abstract        shift and go to state 30

    TITLEH1                        shift and go to state 31
    CONT_A_S                       shift and go to state 32
    CONT_1                         shift and go to state 10
    SECTION                        shift and go to state 11
    ITEMIZED_LIST                  shift and go to state 12
    IMPORTANT                      shift and go to state 13
    PARA                           shift and go to state 14
    SIMPARA                        shift and go to state 15
    ADDRESS                        shift and go to state 16
    MEDIA_OBJECT                   shift and go to state 17
    INFORMAL_TABLE                 shift and go to state 18
    COMMENT                        shift and go to state 19
    ABSTRACT                       shift and go to state 20

state 6

    (4) ARTICLE -> article TITLEH1 . CONT_A_S cierreArticle
    (5) ARTICLE -> article TITLEH1 . CONT_A_S SECTIONS cierreArticle
    (32) CONT_A_S -> . CONT_1
    (33) CONT_A_S -> . CONT_1 CONT_A_S
    (34) CONT_A_S -> . SECTION
    (35) CONT_1 -> . ITEMIZED_LIST
    (36) CONT_1 -> . IMPORTANT
    (37) CONT_1 -> . PARA
    (38) CONT_1 -> . SIMPARA
    (39) CONT_1 -> . ADDRESS
    (40) CONT_1 -> . MEDIA_OBJECT
    (41) CONT_1 -> . INFORMAL_TABLE
    (42) CONT_1 -> . COMMENT
    (43) CONT_1 -> . ABSTRACT
    (19) SECTION -> . section CONT_A_S cierreSection
    (20) SECTION -> . section CONT_A_S SECTIONS cierreSection
    (21) SECTION -> . section INFO CONT_A_S cierreSection
    (22) SECTION -> . section INFO CONT_A_S SECTIONS cierreSection
    (23) SECTION -> . section TITLEH2 CONT_A_S cierreSection
    (24) SECTION -> . section TITLEH2 CONT_A_S SECTIONS cierreSection
    (25) SECTION -> . section INFO TITLEH2 CONT_A_S cierreSection
    (26) SECTION -> . section INFO TITLEH2 CONT_A_S SECTIONS cierreSection
    (27) SECTION -> . section TITLEH2 cierreSection
    (79) ITEMIZED_LIST -> . itemizedlist LIST_ITEM cierreItemizedlist
    (126) IMPORTANT -> . important TITLE CONT_IMPORTANT cierreImportant
    (127) IMPORTANT -> . important CONT_IMPORTANT cierreImportant
    (65) PARA -> . para CONT_PARA cierrePara
    (114) SIMPARA -> . simpara CONT_SECL cierreSimpara
    (102) ADDRESS -> . address cierreAddress
    (103) ADDRESS -> . address CONT_ADDRESS cierreAddress
    (80) MEDIA_OBJECT -> . mediaObject INFO CONT_MEDIA_OBJECT cierreMediaObject
    (81) MEDIA_OBJECT -> . mediaObject CONT_MEDIA_OBJECT cierreMediaObject
    (146) INFORMAL_TABLE -> . informalTable TABLE_MEDIA cierreInformalTable
    (147) INFORMAL_TABLE -> . informalTable TABLE_GROUP cierreInformalTable
    (116) COMMENT -> . comment CONT_SECL cierreComment
    (50) ABSTRACT -> . abstract TITLE cierreAbstract
    (51) ABSTRACT -> . abstract TITLE PARAS cierreAbstract

    section         shift and go to state 21
    itemizedlist    shift and go to state 22
    important       shift and go to state 23
    para            shift and go to state 24
    simpara         shift and go to state 25
    address         shift and go to state 26
    mediaObject     shift and go to state 27
    informalTable   shift and go to state 28
    comment         shift and go to state 29
    abstract        shift and go to state 30

    CONT_A_S                       shift and go to state 33
    CONT_1                         shift and go to state 10
    SECTION                        shift and go to state 11
    ITEMIZED_LIST                  shift and go to state 12
    IMPORTANT                      shift and go to state 13
    PARA                           shift and go to state 14
    SIMPARA                        shift and go to state 15
    ADDRESS                        shift and go to state 16
    MEDIA_OBJECT                   shift and go to state 17
    INFORMAL_TABLE                 shift and go to state 18
    COMMENT                        shift and go to state 19
    ABSTRACT                       shift and go to state 20

state 7

    (8) ARTICLE -> article CONT_A_S . cierreArticle

    cierreArticle   shift and go to state 34


state 8

    (9) INFO -> info . CONT_INFO cierreInfo
    (10) CONT_INFO -> . ELEM_INFO CONT_INFO
    (11) CONT_INFO -> . ELEM_INFO
    (12) ELEM_INFO -> . MEDIA_OBJECT
    (13) ELEM_INFO -> . ABSTRACT
    (14) ELEM_INFO -> . ADDRESS
    (15) ELEM_INFO -> . AUTHOR
    (16) ELEM_INFO -> . DATE
    (17) ELEM_INFO -> . COPYRIGHT
    (18) ELEM_INFO -> . TITLEH1
    (80) MEDIA_OBJECT -> . mediaObject INFO CONT_MEDIA_OBJECT cierreMediaObject
    (81) MEDIA_OBJECT -> . mediaObject CONT_MEDIA_OBJECT cierreMediaObject
    (50) ABSTRACT -> . abstract TITLE cierreAbstract
    (51) ABSTRACT -> . abstract TITLE PARAS cierreAbstract
    (102) ADDRESS -> . address cierreAddress
    (103) ADDRESS -> . address CONT_ADDRESS cierreAddress
    (94) AUTHOR -> . author CONT_AUTHOR cierreAuthor
    (143) DATE -> . date CONT_VAR cierreDate
    (112) COPYRIGHT -> . copyright YEAR cierreCopyright
    (113) COPYRIGHT -> . copyright YEAR HOLDER cierreCopyright
    (53) TITLEH1 -> . title CONT_TITLE cierreTitle

    mediaObject     shift and go to state 27
    abstract        shift and go to state 30
    address         shift and go to state 26
    author          shift and go to state 44
    date            shift and go to state 45
    copyright       shift and go to state 46
    title           shift and go to state 9

    CONT_INFO                      shift and go to state 35
    ELEM_INFO                      shift and go to state 36
    MEDIA_OBJECT                   shift and go to state 37
    ABSTRACT                       shift and go to state 38
    ADDRESS                        shift and go to state 39
    AUTHOR                         shift and go to state 40
    DATE                           shift and go to state 41
    COPYRIGHT                      shift and go to state 42
    TITLEH1                        shift and go to state 43

state 9

    (53) TITLEH1 -> title . CONT_TITLE cierreTitle
    (55) CONT_TITLE -> . ELEM_TITLE
    (56) CONT_TITLE -> . ELEM_TITLE CONT_TITLE
    (57) ELEM_TITLE -> . contenido_texto
    (58) ELEM_TITLE -> . EMPHASIS
    (59) ELEM_TITLE -> . LINK
    (60) ELEM_TITLE -> . EMAIL
    (115) EMPHASIS -> . emphasis CONT_SECL cierreEmphasis
    (117) LINK -> . link CONT_SECL cierreLink
    (142) EMAIL -> . email CONT_VAR cierreEmail

    contenido_texto shift and go to state 49
    emphasis        shift and go to state 53
    link            shift and go to state 54
    email           shift and go to state 55

    CONT_TITLE                     shift and go to state 47
    ELEM_TITLE                     shift and go to state 48
    EMPHASIS                       shift and go to state 50
    LINK                           shift and go to state 51
    EMAIL                          shift and go to state 52

state 10
